renamed DoctorMarkers to DoctorSummaries and added endpoint to swagger doc
